name:                Minesweeper
version:             0.1.0.0
synopsis:            Command-line minesweeper clone in haskell
description:         Command-line minesweeper clone in haskell.
                     Supports randomly-generated boards, and flagging and
                     unflagging tiles.
homepage:            https://github.com/caneroj1/Minesweeper-hs#readme
license:             BSD3
license-file:        LICENSE
author:              jcanero
maintainer:          jmc41493@gmail.com
copyright:           2016 jcanero
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Game.Board
                     , Game.Tile
                     , Game.SetupBoard
                     , Game.RevealTiles
                     , Game.Status
                     , Game.Flow
                     , Game.FlagTiles
                     , Game.Move
  build-depends:       base >= 4.7 && < 5
                     , array
                     , split
                     , hxt-unicode
                     , mtl
                     , haskeline
                     , text
                     , containers
                     , random
  cpp-options:         -DRELEASE
  ghc-options:         -O3
  default-language:    Haskell2010

executable Minesweeper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Minesweeper
  default-language:    Haskell2010

test-suite Minesweeper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Minesweeper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/Minesweeper-hs
